fix: adjust margin for better alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,7 +147,7 @@ a {
     letter-spacing: 1px;
     text-align: center;
     padding: 15px;
-    margin-bottom: 1px;
+    margin-bottom: -15px;
 }
 
 .hero-section-wrapper h1 {
@@ -712,6 +712,7 @@ input {
     .hero-section-wrapper h3 {
         font-size: 0.625rem;
         padding-bottom: 1px;
+        margin-bottom: 5px;
     }
 
 }
